Add labware and deck endpoints
